--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<link rel="stylesheet" href="CSS/style.css" type="text/css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="CSS/style.css" type=text/css>
+	<!-- CSS only -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<!-- JavaScript Bundle with Popper -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+		crossorigin="anonymous"></script>
 	<title>Document</title>
+
 </head>
-<body> 
+
+<body>
 	<p id="p1">
-		<pre>
+	<pre>
 		This application displays a users Akan name depending on the week they
 		were born on and the gender as well.This is per the input of the user.
 
@@ -21,30 +25,29 @@
 		they were born on.
 		</pre>
 	</p>
-    <form  method="GET" >
-	        YOUR  BIRTHDATE<br>
-			<input type="text" placeholder="MM" id="month" required>
-			<input type="text" placeholder="DD" id="date" required>
-			<input type="text" placeholder="YYYY" id="year" required>
-			<button>CHECK</button><br>
-			<h1>Result </h1>	
-			<p id="Gender">Gender</p> <br>
-			    <div>
-				<label for="Male">Male</label>
-				<input name="Gender" type="radio" id="Male"  >
-		        </div>
-				<div>
-				<label for="Female">Female
-				<input type="radio" id="Female" name="Gender" required>
-				</label>
-				</div>
-				<button type="submit" onclick="onSubmit()">SUBMIT</button>
-				<button type="reset">RESET</button><br><br>
-			
-		</form>
-		<p id="output"></p>
+	<form method="GET">
+		YOUR BIRTHDATE<br>
+		<input type="text" placeholder="MM" id="mm" required>
+		<input type="text" placeholder="DD" id="dd" required>
+		<input type="text" placeholder="YYYY" id="yr" required>
 
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-		<script src="JS/script.js"></script>
+
+		<p id="Gender">Gender</p> <br>
+		<div>
+			<label for="Male">Male</label>
+			<input name="Gender" type="radio" id="Male" required>
+		</div>
+		<div>
+			<label for="Female">Female
+				<input type="radio" id="Female" name="Gender" required >
+			</label>
+		</div>
+		<button class="btn" type="button" onclick="getInputValues()">SUBMIT</button>
+
+		<h1 id="output"></h1>
+	</form>
+	<script src="./scripts/script.js"></script>
+
 </body>
+
 </html>
