--- a/index.html
+++ b/index.html
@@ -14,39 +14,41 @@
 
 </head>
 
-<body>
-	<p id="p1">
-	<pre>
-		This application displays a users Akan name depending on the week they
-		were born on and the gender as well.This is per the input of the user.
+<body style="
+font-size: larger;
+color: rgba(148, 238, 139, 0.952);">
+	<pid="p1">
+		<pre>
+		<b>This application displays a users Akan name depending on the week they
+		were born on and the gender as well.This is per the input of the users.
 
 		Akan names are derived from Ghanian culture.In Ghana,children are given 
 		their first name as a 'day'name which corresponds to the day in the week
-		they were born on.
+		they were born on.</b>
 		</pre>
-	</p>
-	<form method="GET">
-		YOUR BIRTHDATE<br>
-		<input type="text" placeholder="MM" id="mm" required>
-		<input type="text" placeholder="DD" id="dd" required>
-		<input type="text" placeholder="YYYY" id="yr" required>
+		</p>
+		<form style="background-color: rgb(14, 15, 37);" method="GET">
+			YOUR BIRTHDATE<br>
+			<input type="text" placeholder="MM" id="mm" required>
+			<input type="text" placeholder="DD" id="dd" required>
+			<input type="text" placeholder="YYYY" id="yr" required>
 
 
-		<p id="Gender">Gender</p> <br>
-		<div>
-			<label for="Male">Male</label>
-			<input name="Gender" type="radio" id="Male" required>
-		</div>
-		<div>
-			<label for="Female">Female
-				<input type="radio" id="Female" name="Gender" required >
-			</label>
-		</div>
-		<button class="btn" type="button" onclick="getInputValues()">SUBMIT</button>
+			<p id="Gender">Gender</p> <br>
+			<div>
+				<label for="Male">Male</label>
+				<input name="Gender" type="radio" id="Male" required>
+			</div>
+			<div>
+				<label for="Female">Female
+					<input type="radio" id="Female" name="Gender" required>
+				</label>
+			</div>
+			<button style="color: blue;font-size: medium;" class="btn" type="button" onclick="getInputValues()">SUBMIT</button>
 
-		<h1 id="output"></h1>
-	</form>
-	<script src="./scripts/script.js"></script>
+			<h1 id="output"></h1>
+		</form>
+		<script src="scripts/script.js"></script>
 
 </body>
 
