Put correct validation for date and correct error message

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ color: rgba(148, 238, 139, 0.952);">
 		were born on and the gender as well.This is per the input of the users.
 
 		Akan names are derived from Ghanian culture.In Ghana,children are given 
-		their first name as a 'day'name which corresponds to the day in the week
+		their first name as a 'day'name which corresponds to the exact day in the week
 		they were born on.</b>
 		</pre>
 		</p>
